--- a/Time_Keep_Co/app/templates/base.html
+++ b/Time_Keep_Co/app/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Dell File Comparator</title>
+    <title>File Comparison Tool</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
